SalesforceProject/force-app/main/default/objects/Address__c/Address__c.object-meta.xml
<CustomObject>
    <label>Endereço</label>
    <nameField>
        <displayFormat>ADDR-{00000}</displayFormat>
        <label>Número do Endereço</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Endereços</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>