SalesforceProject/force-app/main/default/objects/Address__c/fields/Cep__c.field-meta.xml
<CustomField>
    <fullName>Cep__c</fullName>
    <externalId>true</externalId>
    <label>CEP</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>