SalesforceProject/force-app/main/default/objects/Address__c/fields/Uf__c.field-meta.xml
<CustomField>
    <fullName>Uf__c</fullName>
    <label>UF</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>